tests/semantic/type_udef/type_udef.err
Warning: No rules/facts defined for relation R in file type_udef.dl at line 5
.decl R(type1:Type, type2:XType)
^--------------------------------
Error: Undefined type in attribute type2:XType in file type_udef.dl at line 5
.decl R(type1:Type, type2:XType)
--------------------------^------
Error: Undefined type B in definition of union type U in file type_udef.dl at line 7
.type U = Type | B
^------------------
Error: Doubly defined field name a in definition of type V in file type_udef.dl at line 8
.type V = [ a:Type, b:B , a:A ]
^-------------------------------
Error: Undefined type A in definition of field a in file type_udef.dl at line 8
.type V = [ a:Type, b:B , a:A ]
^-------------------------------
Error: Undefined type B in definition of field b in file type_udef.dl at line 8
.type V = [ a:Type, b:B , a:A ]
^-------------------------------
5 errors generated, evaluation aborted
