tests/semantic/type_udef/type_udef.dl
// Negative test case for a relation with undeclared type

.type Type

.decl R(type1:Type, type2:XType)

.type U = Type | B
.type V = [ a:Type, b:B , a:A ]
